# davinci-design

./: .gitignore  404.html  README.md  index.2212206d.css  index.2212206d.css.map  index.2d41cf64.js  index.3a0e6c34.js  index.3b492326.js  index.58a002aa.js  index.610672bf.js  index.6e5567db.js  index.855c7d0c.css  index.855c7d0c.css.map  index.a4f02d5f.js  index.a637098b.js  index.b4749c5a.js  index.b7c2fdc5.js  index.e09b57a2.css  index.e09b57a2.css.map  index.html  index.runtime.0c7ce0c2.js  index.runtime.0c7ce0c2.js.map  index.runtime.4cc64852.js  index.runtime.4cc64852.js.map  index.runtime.6c684b65.js  index.runtime.6c684b65.js.map  index.runtime.79687c53.js  index.runtime.79687c53.js.map  index.runtime.7ce12f6c.js  index.runtime.7ce12f6c.js.map  index.runtime.876fff4d.js  index.runtime.876fff4d.js.map  index.runtime.a1d6e9fc.js  index.runtime.a1d6e9fc.js.map  index.runtime.b55cfd73.js  index.runtime.b55cfd73.js.map  index.runtime.baba33d3.js  index.runtime.baba33d3.js.map  index.runtime.f35d215c.js  index.runtime.f35d215c.js.map  (+3 more)
ansible/: Caddyfile  davinci-backend.service  deploy.yaml  full-setup.yaml
backend/: README.md  pyproject.toml
backend/davinci_backend/: file_utils.py  main.py
backend/davinci_backend/db/: __init__.py  models.py  setup.py  utils.py
backend/davinci_backend/graphql/: schema.py
frontend/: .gitignore  .pnp.cjs  .proxyrc.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: index.html  index.tsx
scripts/: deploy.sh  dev-backend.sh  dev-frontend.sh  setup.sh
src/: App.tsx  index.html  index.tsx  types.d.ts
(+22 files in other folders)
